results/SVCOMP/0-shot/log-arrayread1-2024_03_18_22_57_33.txt
class arrayread1 {

  static arrayread1 readback;

  //@ requires c == 1;
  //@ ensures \result == ((readback == null) ? 1 : 0);
  public static int func(int c) {
    if (c != 1) return -1;
    arrayread1[] a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == ((readback == null) ? 1 : 0);
                           ^
1 error

